VH4-120: Bugfix - Correct header alignment

--- a/styles/pages/contact.css
+++ b/styles/pages/contact.css
@@ -294,6 +294,7 @@ header {
     width: 730px;
     height: 133px;
     margin-left: 165px;
+    padding-left: 0px;
   }
 
   .contact-check input[type="checkbox"]:checked {
